--- a/registration.html
+++ b/registration.html
@@ -28,7 +28,7 @@
                 <legend>Personal Details</legend>
                 <input class="input_field" type="text" placeholder="First Name" Required>
                 <input class="input_field" type="text" placeholder="Middle Name" Required>
-                <input class="input_field" type="text" placeholder="Surame" Required><br>
+                <input class="input_field" type="text" placeholder="Surame" Required>
                 <input class="input_field" type="text" name="" placeholder="Phone Number">
                 <input class="input_field perm" type="text" name="" placeholder="Permanent Address"><br>
                 <label for="Gender" class="gender">Gender:</label>
@@ -60,7 +60,7 @@
                     <label class="birth bought" for="year">Year Bought</label>
                     <input class="input_field" type="date">
                 </div>
-                <textarea name="complaints/enqueries" id="" cols="115" rows="10" placeholder="Enter complaints/Enquries"></textarea>
+                <textarea name="complaints/enqueries" id="" cols="40" rows="10" placeholder="Enter complaints/Enquries"></textarea>
             </fieldset>
             <a href="index.html"><input class="form_btn" type="Submit" name="" value="Register"></a>
         </div>
