--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                 laborum facilis? Eaque doloremque assumenda nihil accusantium sint, sapiente 
                 numquam earum! Quis in ullam amet? A laudantium voluptate quod odio! Lorem ipsum 
                 dolor sit amet consectetur adipisicing elit. Labore molestiae alias delectus 
-                voluptate provident tempore, explicabo eligendi corporis voluptatibus temporibus 
-                blanditiis a et ut ullam! Vel labore provident quis ea!
+                voluptate provident tempore, explicabo eligendi corporis.
             </p>
         </div>
         
